[package]
name = "kvproto"
version = "0.0.2"
keywords = ["TiKV"]
edition = "2018"
build = "build.rs"

[lib]
name = "kvproto"
path = "src/lib.rs"

[features]
default = ["protobuf-codec"]
protobuf-codec = ["protobuf-build/grpcio-protobuf-codec", "raft-proto/protobuf-codec", "grpcio/protobuf-codec"]
prost-codec = ["prost", "prost-derive", "lazy_static", "protobuf-build/grpcio-prost-codec", "raft-proto/prost-codec", "grpcio/prost-codec"]

[dependencies]
protobuf = "=2.8.0"
prost = { version = "0.6", optional = true }
prost-derive = { version = "0.6", optional = true }
futures = "0.3.5"
grpcio = { version = "0.6.0", default-features = false, features = ["secure"] }
raft-proto = { version = "0.6.0-alpha", default-features = false }
lazy_static = { version = "1.3", optional = true }

[build-dependencies]
protobuf-build = { version = "0.11", default-features = false }

[patch.crates-io]
raft-proto = { git = "https://github.com/tikv/raft-rs", rev = "e624c1d48460940a40d8aa69b5329460d9af87dd" }
protobuf-codegen = { git = "https://github.com/pingcap/rust-protobuf", rev="b67d432c1b74350b38a5d96ddf885ac6c3ff46f5" }
protobuf = { git = "https://github.com/pingcap/rust-protobuf", rev="b67d432c1b74350b38a5d96ddf885ac6c3ff46f5" }
